# cim

./: Cargo.toml  Makefile  README.md  cross-compile.sh
completions/: cim.bash
dsdk-cli/: Cargo.toml
dsdk-cli/src/: cli.rs  config.rs  doc_manager.rs  docker_manager.rs  download.rs  git_manager.rs  git_operations.rs  init_cmd.rs  install_cmd.rs  main.rs  makefile.rs  release_cmd.rs  toolchain_manager.rs  update_cmd.rs  workspace.rs
dsdk-cli/tests/: config_tests.rs  doc_manager_tests.rs  docker_tests.rs  git_tests.rs
dsdk-cli/tests/common/: mod.rs
dsdk-gui/: Cargo.toml
dsdk-tui/: Cargo.toml
dsdk-tui/src/: app.rs  cim.rs  events.rs  ui.rs
