[package]
name = "dsdk-cli"
version = "1.1.12"
edition = "2021"

[[bin]]
name = "cim"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "1.0"
clap = { version = "4.0", features = ["derive"] }
tempfile = "3.10"
threadpool = "1.8"
regex = "1.10"
sha2 = "0.10"
reqwest = { version = "0.13", features = ["blocking", "rustls"], default-features = false }
indicatif = "0.18"
scraper = "0.25"
anyhow = "1.0"
bytes = "1.11.1"  # Fix RUSTSEC-2026-0007: Integer overflow in BytesMut::reserve
glob = "0.3"
hex = "0.4"
arboard = "3.4"
flate2 = "1.0"
tar = "0.4.45"  # Fix CVE-2025-62518: PAX size header / symlink permission bypass
