[package]
name = "dsdk-gui"
version = "1.1.6"
edition = "2021"

[[bin]]
name = "cim-installer"
path = "src/main.rs"

[dependencies]
eframe = "0.33"
egui = "0.33"
reqwest = { version = "0.13", features = ["blocking", "rustls"], default-features = false }
anyhow = "1.0"
scraper = "0.25"
bytes = "1.11.1"  # Fix RUSTSEC-2026-0007: Integer overflow in BytesMut::reserve

dirs = "6.0"
rfd = "0.17"
arboard = "3.4"

[dev-dependencies]
tempfile = "3.0"
